fix: prevent detail page content from overflowing viewport
- Add overflow-x: hidden to spot/obstacle/notice description panels
- Set detail tables to width: 100% with auto layout
- Shrink-wrap clipboard-cell columns to button content width
- Enable word-wrap on table cells instead of truncation
- Reduce clipboard-cell padding to prevent excess spacing
- Remove text-nowrap from GPS coordinates span

--- a/_sass/pages/_notice-details.scss
+++ b/_sass/pages/_notice-details.scss
@@ -33,6 +33,7 @@
   .notice-description {
     padding-right: 1.5em;
     padding-left: 1.5em;
+    overflow-x: hidden;
   }
 
   .notice-description > div {
@@ -43,6 +44,10 @@
     padding-top: 0.7em;
     margin-bottom: 1em;
     border-bottom: 1px solid $swisscanoe-blue;
+  }
+
+  .notice-details-table {
+    width: 100%;
   }
 
   .notice-details-table ul {
