--- a/assets/css/application.scss
+++ b/assets/css/application.scss
@@ -46,7 +46,7 @@ main {
   }
 
   .clipboard-cell {
-    padding-left: 2em;
+    padding-left: 0.5em;
   }
 }
 @media screen and (max-width: 992px) {
@@ -55,7 +55,7 @@ main {
   }
 
   .clipboard-cell {
-    padding-left: 3em;
+    padding-left: 0.5em;
   }
 }
 
